# www/api/resources/submission.py
@@ -1,7 +1,7 @@
 #!/opt/bin/python3
 
-from flask import request, abort
-from flask_restful import Resource
+from flask import request
+from flask_restful import Resource, abort
 import os,sys
 import requests
 
@@ -30,7 +30,7 @@ def send_email(result, submission, user_email):
 
     submission_id = submission.id
     layout = submission.get_layout_info()
-    layout_share_id = layout.share_id
+    layout_share_id = layout.share_id if layout else None
 
     # https://docs.python.org/3/library/email-examples.html
     # user = email
@@ -48,13 +48,14 @@ def send_email(result, submission, user_email):
     elif result["partial_success"]:
         text += f"While some datasets were successfully imported, we encountered some issues importing {num_failures} of the datasets."
     else:
-        text += f"Unfortunately, it appears that all {num_datasets} datasets for this submission ran into issues during the import process."
+        text += f" Unfortunately, it appears that all {num_datasets} datasets for this submission ran into issues during the import process."
 
     text += f"\n\nYou can view the status of all datasets at {domain_url}/nemoarchive_import/import.html?submission_id={submission_id}. "
     if result["partial_success"]:
         text += "Each successfully imported dataset has a link to view the dataset on the gene expression search page. "
         text += "We performed a basic Seurat analysis on the dataset and created a tSNE display, but we encourage you to curate your own displays to support your own research (see https://umgear.org/manual.html?doc=curation for documentation). "
 
+    if layout_share_id:
         text += f"\n\nYou can also view all dataset displays as a collection by going to {domain_url}/p?l=${layout_share_id} (you will need to search for a gene to show the displays)."
 
     text += f"\n\nIf you have any questions about your import, feel free to reach us at {domain_url}/contact.html"
@@ -79,19 +80,22 @@ class Submission(Resource):
 
     def get(self, submission_id):
         """Retrieve a particular submission based on ID."""
-        result = {"self": request.path, "success":False, "datasets":{}, "layout_share_id":None}
+        url_path = request.root_path + request.path
+        result = {"self": url_path, "success":False, "datasets":{}, "layout_share_id":None, "is_finished":False}
 
-        session_id = request.cookies.get('session_id')
+        session_id = request.cookies.get('gear_session_id')
         # Must have a gEAR account to upload datasets
         user = geardb.get_user_from_session_id(session_id)
 
         submission = geardb.get_submission_by_id(submission_id)
         if not submission:
-            return result
+            abort(404)
 
         layout = submission.get_layout_info()
         if layout:
             result["layout_share_id"] = layout.share_id
+
+        result["is_finished"] = bool(submission.is_finished)
 
         sd = geardb.SubmissionDatasetCollection()
         submission.datasets = sd.get_by_submission_id(submission_id)
@@ -102,9 +106,19 @@ class Submission(Resource):
         result["success"] = True
         return result
 
+    def delete(self, submission_id):
+        """Delete the existing submission from the database."""
+        submission = geardb.get_submission_by_id(submission_id)
+        if not submission:
+            abort(404)
+        submission.remove()
+
+
     def post(self, submission_id):
         """Start the import process for this submission."""
-        session_id = request.cookies.get('session_id')
+        url_path = request.root_path + request.path
+
+        session_id = request.cookies.get('gear_session_id')
         # Must have a gEAR account to upload datasets
         user = geardb.get_user_from_session_id(session_id)
 
@@ -114,8 +128,7 @@ class Submission(Resource):
         action = req.get("action")
 
         submission = geardb.get_submission_by_id(submission_id)
-        submission_datasets = geardb.SubmissionDatasetCollection()
-        submission.datasets = submission_datasets.get_by_submission_id(submission_id=submission_id)
+        submission.datasets = geardb.SubmissionDatasetCollection().get_by_submission_id(submission_id=submission_id)
 
         if action == "import":
             dataset_results = {}
@@ -124,10 +137,14 @@ class Submission(Resource):
             partial_success = False # At least one dataset import was successful
             num_failures = 0
 
-            for s_dataset in submission_datasets:
+            # TODO: make async
+            for s_dataset in submission.datasets:
+
+                dataset_id = s_dataset.dataset_id
+                identifier = s_dataset.nemo_identifier
 
                 # Get first instance of entity match dataset ID or sample ID
-                file_attributes = next(filter(lambda entity: entity["id"] == dataset_id, file_metadata))["attributes"]
+                file_attributes = next(filter(lambda entity: entity["attributes"]["id"] == dataset_id, file_metadata))["attributes"]
                 sample_attributes = next(filter(lambda entity: entity["name"] == file_attributes["sample_id"], sample_metadata))["attributes"]
 
                 all_attributes = {
@@ -135,13 +152,15 @@ class Submission(Resource):
                     , "sample": sample_attributes
                     }
 
-                dataset_id = s_dataset["dataset_id"]
-                identifier = s_dataset["identifier"]
-
                 # Call NeMO Archive assets API using identifier
-                #result = requests.post(f"https://nemoarchive.org/asset/derived/{identifier}")
-                result = requests.post(f"/api/mock_identifier/{identifier}")
-                result.raise_for_status()
+                try:
+                    #result = requests.post(f"https://nemoarchive.org/asset/derived/{identifier}")
+                    result = requests.get(f"http://localhost/api/mock_identifier/{identifier}", verify=False)
+                    result.raise_for_status()
+                except Exception as e:
+                    s_dataset.save_change(attribute="log_message", value=str(e))
+                    continue
+
                 decoded_result = result.json()
                 api_metadata = decoded_result["metadata"]
 
@@ -149,13 +168,22 @@ class Submission(Resource):
                 all_metadata = {
                     "dataset": {**all_attributes["dataset"], **api_metadata["dataset"]}
                     , "sample": {**all_attributes["sample"], **api_metadata["sample"]}
-
                 }
 
                 # Start the import process for each dataset
                 params = {"metadata": all_metadata, "action": "import"}
-                result = requests.post(request.path + f"datasets/${dataset_id}", json=params, verify=False)
-                result.raise_for_status()
+                try:
+                    result = requests.post(f"http://localhost/{url_path}" + f"/datasets/{dataset_id}"
+                        , json=params
+                        , cookies={"gear_session_id":session_id}
+                        , verify=False)
+                    result.raise_for_status()
+                except Exception as e:
+                    print(str(e), file=sys.stderr)
+                    num_failures += 1
+                    all_success = False
+                    continue
+
                 decoded_result = result.json()
 
                 dataset_results[dataset_id] = decoded_result
@@ -167,8 +195,10 @@ class Submission(Resource):
                     num_failures += 1
                     all_success = False
 
-            result = {"self":request.path
-                    , "dataset":dataset_results
+            #submission.save_change(attribute="is_finished", value=1)
+
+            result = {"self":url_path
+                    , "datasets":dataset_results
                     , "all_success":all_success
                     , "partial_success":partial_success
                     , "num_failures": num_failures
@@ -203,6 +233,8 @@ class Submissions(Resource):
 
     def post(self):
         """Create a new empty submission in the database."""
+        url_path = request.root_path + request.path
+
         # Must have a gEAR account to create submissions
         session_id = request.cookies.get('gear_session_id')
         user = geardb.get_user_from_session_id(session_id)
@@ -211,7 +243,7 @@ class Submissions(Resource):
         submission_id = req.get("submission_id")
         is_restricted = req.get("is_restricted")
 
-        result = {"self": request.path, "success":False, "datasets":{}, "layout_share_id":None, "message":""}
+        result = {"self": url_path, "success":False, "datasets":{}, "layout_share_id":None, "message":""}
 
         submission = geardb.get_submission_by_id(submission_id)
         if submission:
@@ -233,7 +265,7 @@ class Submissions(Resource):
         except:
             abort(400, message="Could not save new submission to database")
 
-        result["href"] = result["self"] + f"/${submission_id}" # This can be GET-able
+        result["href"] = result["self"] + f"/{submission_id}" # This can be GET-able
 
         result["success"] = True
         result["message"] = "Submission database entries have been populated"
